# video_generation_backend

./: .gitignore  main.py  pyproject.toml
notebooks/: develop_api.ipynb
src/adapters/: azure_blob.py
